--- a/dom/getClientRects.html
+++ b/dom/getClientRects.html
@@ -15,10 +15,16 @@
 <style>
     div {
         width: 60px;
-        border: 1px solid burlywood
+        height: 30px;
+        padding: 10px;
+        overflow: scroll;
+        border: 10px dashed aqua;
     }
     span {
-        border: 1px solid deepskyblue
+        border: 1px solid deepskyblue;
     }
 </style>
+<script>
+    console.log(document.querySelector('div').offsetHeight)
+</script>
 </html>
