--- a/bubbling-capture/test-1.html
+++ b/bubbling-capture/test-1.html
@@ -26,7 +26,7 @@
     window.onclick = function() {
         console.log('4, you click window')
     }
-    // 控制台中的执行顺序为 1, 2, 3, 4(即事件冒泡)
+    // 执行顺序为 1, 2, 3, 4(即事件冒泡)
 </script>
 
 </html>
