--- a/bubbling-capture/test-2.html
+++ b/bubbling-capture/test-2.html
@@ -26,7 +26,7 @@
     window.addEventListener('click', function () {
         console.log('4, you click window')
     }, true)
-    // 执行顺序为4, 1, 2, 3. 可以看到,点击事件被父元素截获了,且只在捕获阶段执行一次.
+    // 执行顺序为4, 1, 2, 3.
 </script>
 
 </html>
