--- a/dom/download/index.html
+++ b/dom/download/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="./wallpaper.jpg" download=""> 测试图片下载</a>
+    <a href="wallpaper.jpg" download="wallpaper">测试图片下载</a>
 </body>
 </html>
-<!-- download属性仅对 a 标签下载本地文件时生效, http 外链图片资源无效,会直接跳转 -->
+<!-- download属性的效果受同源策略的影响.跨域资源无法直接下载 -->
