--- a/event-loop/test-4.html
+++ b/event-loop/test-4.html
@@ -13,6 +13,9 @@
     console.log('a')
     Promise.resolve().then(() => {
         console.log('promise1')
+        setTimeout(() => {
+        console.log('timeout2')
+    }, 0)
     }).then(() => {
         console.log('promise2')
     })
