--- a/dom/dataset/dataset.html
+++ b/dom/dataset/dataset.html
@@ -15,5 +15,6 @@
     var datamap = document.querySelector('div').dataset
     datamap.mySex = 'male'
     console.log(datamap)
+    console.log('user' in datamap)
 </script>
 </html>
